add PAC; refactor code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(DAC)
 export(DAC_languages)
 export(DAC_standalone)
+export(PAC)
+export(PAC_languages)
+export(PAC_standalone)
+export(standalone)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
