--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export(DAC_standalone)
 export(PAC)
 export(PAC_languages)
 export(PAC_standalone)
+export(TPI)
+export(TPI_languages)
+export(TPI_standalone)
 export(standalone)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"filter")
