add SAC and SCS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,12 @@ export(DAC_standalone)
 export(PAC)
 export(PAC_languages)
 export(PAC_standalone)
+export(SCA)
+export(SCA_languages)
+export(SCA_standalone)
+export(SCS)
+export(SCS_languages)
+export(SCS_standalone)
 export(TPI)
 export(TPI_languages)
 export(TPI_standalone)
