--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ export(SCA_standalone)
 export(SCS)
 export(SCS_languages)
 export(SCS_standalone)
+export(SEM)
+export(SEM_languages)
+export(SEM_standalone)
 export(TPI)
 export(TPI_languages)
 export(TPI_standalone)
