add SDQ (still needs itme bank restructuring)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ export(SCA_standalone)
 export(SCS)
 export(SCS_languages)
 export(SCS_standalone)
+export(SDQ)
+export(SDQ_languages)
+export(SDQ_standalone)
 export(SEM)
 export(SEM_languages)
 export(SEM_standalone)
