--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,9 @@ export(SDQ_standalone)
 export(SEM)
 export(SEM_languages)
 export(SEM_standalone)
+export(TOM)
+export(TOM_languages)
+export(TOM_standalone)
 export(TPI)
 export(TPI_languages)
 export(TPI_standalone)
