--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,9 @@ export(SDQ_standalone)
 export(SEM)
 export(SEM_languages)
 export(SEM_standalone)
+export(SOS)
+export(SOS_languages)
+export(SOS_standalone)
 export(TOM)
 export(TOM_languages)
 export(TOM_standalone)
