--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,9 @@ export(SEM_standalone)
 export(SOS)
 export(SOS_languages)
 export(SOS_standalone)
+export(TOI)
+export(TOI_languages)
+export(TOI_standalone)
 export(TOM)
 export(TOM_languages)
 export(TOM_standalone)
