Added some qualifications and requirements to make it run on my machine. Fixed title translation. Some formatting

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
     methods,
     htmltools (>= 0.3.6),
     tidyverse (>= 1.2.1),
+    stringr (>= 1.4),
     dplyr,
     purrr,
     tibble
