--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: psyquest
 Type: Package
 Title: Collection of PsychTestR Questionnaires
 Version: 0.1.0
-Author: Klaus Frieler
+Author: Klaus Frieler, Frank Höger
 Maintainer: Klaus Frieler <kf@omniversum.de>
-Description: Implementation of standard questionnaires for psychTestR libraries
+Description: Implementation of standard questionnaires for psychTestR libraries.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
