add battery function and basic test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(TOM_standalone)
 export(TPI)
 export(TPI_languages)
 export(TPI_standalone)
+export(battery)
 export(standalone)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"filter")
