add MHE; add NAFC_radiobuttons_page, add NOMC_page#

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,11 @@
 export(DAC)
 export(DAC_languages)
 export(DAC_standalone)
+export(MHE)
+export(MHE_languages)
+export(MHE_standalone)
+export(NAFC_radiobuttons_page)
+export(NOMC_page)
 export(PAC)
 export(PAC_languages)
 export(PAC_standalone)
@@ -31,6 +36,8 @@ export(TPI)
 export(TPI_languages)
 export(TPI_standalone)
 export(battery)
+export(make_ui_NAFC_radiobuttons)
+export(make_ui_NOMC)
 export(standalone)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"filter")
