add GMS incl. tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export(CCM_standalone)
 export(DAC)
 export(DAC_languages)
 export(DAC_standalone)
+export(GMS)
+export(GMS_languages)
+export(GMS_standalone)
 export(MHE)
 export(MHE_languages)
 export(MHE_standalone)
