--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ export(CCM_standalone)
 export(DAC)
 export(DAC_languages)
 export(DAC_standalone)
+export(DEG)
+export(DEG_languages)
+export(DEG_standalone)
 export(GMS)
 export(GMS_languages)
 export(GMS_standalone)
