--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,8 @@ export(TPI_standalone)
 export(battery)
 export(make_ui_NAFC_radiobuttons)
 export(make_ui_NOMC)
+export(make_ui_month_and_year_select)
+export(month_and_year_select_page)
 export(standalone)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"filter")
