--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,8 @@ export(SDQ_standalone)
 export(SEM)
 export(SEM_languages)
 export(SEM_standalone)
+export(SES)
+export(SES_standalone)
 export(SOS)
 export(SOS_languages)
 export(SOS_standalone)
