add test for conditional on DEG; import insert from R.utils; fix DEG postprocessing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(make_ui_NOMC)
 export(make_ui_month_and_year_select)
 export(month_and_year_select_page)
 export(standalone)
+importFrom(R.utils,"insert")
 importFrom(dplyr,"%>%")
 importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
