remove obsolete num_items param

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(SEM)
 export(SEM_languages)
 export(SEM_standalone)
 export(SES)
+export(SES_languages)
 export(SES_standalone)
 export(SOS)
 export(SOS_languages)
