--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,9 @@ export(DEG_standalone)
 export(GMS)
 export(GMS_languages)
 export(GMS_standalone)
+export(GRT)
+export(GRT_languages)
+export(GRT_standalone)
 export(MHE)
 export(MHE_languages)
 export(MHE_standalone)
