--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,9 @@ export(GMS_standalone)
 export(GRT)
 export(GRT_languages)
 export(GRT_standalone)
+export(HOP)
+export(HOP_languages)
+export(HOP_standalone)
 export(MHE)
 export(MHE_languages)
 export(MHE_standalone)
