--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,15 @@ importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
 importFrom(dplyr,"pull")
 importFrom(methods,"is")
+importFrom(psychTestR,"NAFC_page")
+importFrom(psychTestR,"conditional")
+importFrom(psychTestR,"dropdown_page")
+importFrom(psychTestR,"get_local")
+importFrom(psychTestR,"page")
+importFrom(psychTestR,"set_local")
+importFrom(psychTestR,"text_input_page")
 importFrom(purrr,"is_scalar_character")
 importFrom(purrr,"is_scalar_double")
 importFrom(purrr,"is_scalar_integer")
+importFrom(stats,"setNames")
 importFrom(tibble,"tibble")
