--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: psyquest
 Type: Package
 Title: Collection of PsychTestR Questionnaires
-Version: 0.1.0
+Version: 0.2.0
 Author: Klaus Frieler, Frank Höger
 Maintainer: Klaus Frieler <kf@omniversum.de>
 Description: Implementation of standard questionnaires for psychTestR libraries.
@@ -11,20 +11,19 @@ LazyData: true
 Depends:
     R (>= 3.5.0),
 Imports:
-    psychTestRCAT (>= 1.5.0),
-    psychTestR (>= 2.4.3),
-    shiny (>= 1.2.0),
+    psychTestR,
+    shiny,
     methods,
-    htmltools (>= 0.3.6),
-    tidyverse (>= 1.2.1),
-    stringr (>= 1.4),
+    htmltools,
+    tidyverse,
+    stringr,
     dplyr,
     purrr,
     tibble,
     R.utils
 Suggests:
     codetools,
-    devtools (>= 1.13.6),
+    devtools,
     testthat
-Remotes: pmcharrison/psychTestR, pmcharrison/psychTestRCAT
+Remotes: fmhoeger/psychTestR
 RoxygenNote: 7.1.0
