--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: psyquest
 Type: Package
-Title: Collection of PsychTestR Questionnaires
+Title: Collection of PsychTestR questionnaires
 Version: 0.2.0
 Author: Klaus Frieler, Frank Höger
 Maintainer: Klaus Frieler <kf@omniversum.de>
@@ -12,15 +12,15 @@ Depends:
     R (>= 3.5.0),
 Imports:
     psychTestR,
-    shiny,
-    methods,
-    htmltools,
-    tidyverse,
-    stringr,
-    dplyr,
-    purrr,
-    tibble,
-    R.utils
+    shiny (>= 1.4.0),
+    methods (>= 3.6.1),
+    htmltools (>= 0.4.0),
+    tidyverse (>= 1.3.0),
+    stringr (>= 1.4.0),
+    dplyr (>= 0.8.3),
+    purrr (>= 0.3.3),
+    tibble (>= 2.1.3),
+    R.utils (>= 2.9.2)
 Suggests:
     codetools,
     devtools,
