fix imports; fix Undefined global functions NOTE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,3 +77,4 @@ importFrom(purrr,"is_scalar_double")
 importFrom(purrr,"is_scalar_integer")
 importFrom(stats,"setNames")
 importFrom(tibble,"tibble")
+importFrom(utils,"read.delim")
