--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: psyquest
 Type: Package
 Title: Collection of PsychTestR questionnaires
-Version: 0.2.0
+Version: 0.99.1
 Author: Klaus Frieler, Frank Höger
 Maintainer: Klaus Frieler <kf@omniversum.de>
 Description: Implementation of standard questionnaires for psychTestR libraries.
@@ -9,18 +9,19 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Depends:
-    R (>= 3.5.0),
+    R (>= 3.6.0),
 Imports:
-    psychTestR,
-    shiny (>= 1.4.0),
-    methods (>= 3.6.1),
-    htmltools (>= 0.4.0),
-    tidyverse (>= 1.3.0),
-    stringr (>= 1.4.0),
+    catR (>= 3.16.0),
     dplyr (>= 0.8.3),
+    htmltools (>= 0.4.0),
+    methods (>= 3.6.1),
+    psychTestR (>= 2.19.0),
     purrr (>= 0.3.3),
+    R.utils (>= 2.9.2),
+    shiny (>= 1.4.0),
+    stringr (>= 1.4.0),
     tibble (>= 2.1.3),
-    R.utils (>= 2.9.2)
+    tidyverse (>= 1.3.0)
 Suggests:
     codetools,
     devtools,
