add configuration_filepath to GMS; add tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,4 +77,5 @@ importFrom(purrr,"is_scalar_double")
 importFrom(purrr,"is_scalar_integer")
 importFrom(stats,"setNames")
 importFrom(tibble,"tibble")
+importFrom(utils,"read.csv")
 importFrom(utils,"read.delim")
