--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ cache: packages
 warnings_are_errors: true
 os:
   - linux
+notifications:
+  email:
+    - frank@mirsem.org
+    - viola.pausch@posteo.de
+    - kilian.sander@aol.com
 
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_github("rstudio/rmarkdown"); install.packages("shinytest"); shinytest::installDependencies()'
 #deploy:
