add basic randomisation for DAC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(psychTestR,"conditional")
 importFrom(psychTestR,"dropdown_page")
 importFrom(psychTestR,"get_local")
 importFrom(psychTestR,"page")
+importFrom(psychTestR,"randomise_at_run_time")
 importFrom(psychTestR,"set_local")
 importFrom(psychTestR,"text_input_page")
 importFrom(purrr,"is_scalar_character")
