--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ notifications:
     - kilian.sander@aol.com
 
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_github("rstudio/rmarkdown"); install.packages("shinytest"); shinytest::installDependencies()'
+
+after_success:
+  - Rscript -e 'covr::codecov()'
+
 #deploy:
 #  provider: script
 #  script: Rscript -e 'pkgdown::deploy_site_github()'
