--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,20 @@
 Package: psyquest
 Type: Package
-Title: Collection of PsychTestR questionnaires
+Title: LongGold psychTestR questionnaires
 Version: 1.0.2
 Author: Klaus Frieler, Frank Höger
 Maintainer: Frank Höger <fmh@mirsem.org>
 Description: Implementation of standard questionnaires for psychTestR libraries.
 License: MIT + file LICENSE
+URL: https://github.com/fmhoeger/psyquest
+BugReports: https://github.com/fmhoeger/psyquest/issues
 Encoding: UTF-8
 LazyData: true
 Depends:
-    R (>= 3.6.0),
+    R (>= 3.6.0)
 Imports:
     catR (>= 3.16),
-    dplyr (>= 0.8.5),
+    dplyr (>= 1.0.0),
     htmltools (>= 0.4.0),
     methods (>= 3.6.1),
     psychTestR (>= 2.19.0),
