--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: LongGold psychTestR questionnaires
 Version: 1.0.6
 Author: Klaus Frieler, Frank Höger
 Maintainer: Frank Höger <fmh@mirsem.org>
-Description: Implementation of standard questionnaires for psychTestR libraries.
+Description: Implementation of 17 questionnaires developed for the LongGold project and based on the psychTestR library.
 License: MIT + file LICENSE
 URL: https://github.com/fmhoeger/psyquest
 BugReports: https://github.com/fmhoeger/psyquest/issues
