--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(CCM)
 export(CCM_languages)
 export(CCM_standalone)
+export(CMT)
+export(CMT_languages)
+export(CMT_standalone)
 export(DAC)
 export(DAC_languages)
 export(DAC_standalone)
