--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: psyquest
 Type: Package
 Title: LongGold psychTestR questionnaires
-Version: 1.0.7
+Version: 1.0.8
 Author: Klaus Frieler, Frank Höger
 Maintainer: Frank Höger <fmh@mirsem.org>
 Description: Implementation of 17 questionnaires developed for the LongGold project and based on the psychTestR library.
@@ -16,7 +16,7 @@ Imports:
     catR (>= 3.16),
     dplyr (>= 1.0.0),
     htmltools (>= 0.4.0),
-    methods (>= 3.6.1),
+    methods,
     psychTestR (>= 2.19.1),
     purrr (>= 0.3.4),
     R.utils (>= 2.9.2),
