--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ export(HOP_standalone)
 export(MHE)
 export(MHE_languages)
 export(MHE_standalone)
-export(NAFC_radiobuttons_page)
 export(NOMC_page)
 export(PAC)
 export(PAC_languages)
@@ -57,10 +56,11 @@ export(TPI)
 export(TPI_languages)
 export(TPI_standalone)
 export(battery)
-export(make_ui_NAFC_radiobuttons)
 export(make_ui_NOMC)
 export(make_ui_month_and_year_select)
+export(make_ui_radiobutton_NAFC)
 export(month_and_year_select_page)
+export(radiobutton_NAFC_page)
 export(standalone)
 importFrom(R.utils,"insert")
 importFrom(dplyr,"%>%")
