import radiobutton_NAFC_page from psychTestR and delete corresponding code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,9 +58,7 @@ export(TPI_standalone)
 export(battery)
 export(make_ui_NOMC)
 export(make_ui_month_and_year_select)
-export(make_ui_radiobutton_NAFC)
 export(month_and_year_select_page)
-export(radiobutton_NAFC_page)
 export(standalone)
 importFrom(R.utils,"insert")
 importFrom(dplyr,"%>%")
@@ -73,6 +71,7 @@ importFrom(psychTestR,"conditional")
 importFrom(psychTestR,"dropdown_page")
 importFrom(psychTestR,"get_local")
 importFrom(psychTestR,"page")
+importFrom(psychTestR,"radiobutton_NAFC_page")
 importFrom(psychTestR,"set_local")
 importFrom(psychTestR,"text_input_page")
 importFrom(purrr,"is_scalar_character")
