import radiobutton_NAFC_page from psychTestR update code for new radiobutton_NAFC_page signature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ export(HOP_standalone)
 export(MHE)
 export(MHE_languages)
 export(MHE_standalone)
-export(NAFC_radiobuttons_page)
 export(NOMC_page)
 export(PAC)
 export(PAC_languages)
@@ -57,7 +56,6 @@ export(TPI)
 export(TPI_languages)
 export(TPI_standalone)
 export(battery)
-export(make_ui_NAFC_radiobuttons)
 export(make_ui_NOMC)
 export(make_ui_month_and_year_select)
 export(month_and_year_select_page)
@@ -73,6 +71,7 @@ importFrom(psychTestR,"conditional")
 importFrom(psychTestR,"dropdown_page")
 importFrom(psychTestR,"get_local")
 importFrom(psychTestR,"page")
+importFrom(psychTestR,"radiobutton_NAFC_page")
 importFrom(psychTestR,"set_local")
 importFrom(psychTestR,"text_input_page")
 importFrom(purrr,"is_scalar_character")
