--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,11 @@ os:
 notifications:
   email:
     - fmhoeger@mirsem.org
-    - kgf@omniversum.de
 
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_github("rstudio/rmarkdown"); install.packages("shinytest"); shinytest::installDependencies()'
 
 after_success:
-  - Rscript -e 'covr::codecov()'
+  - travis_wait Rscript -e 'covr::codecov()'
 
 #deploy:
 #  provider: script
