--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,10 @@ Depends:
     R (>= 3.6.0)
 Imports:
     catR (>= 3.16),
-    dplyr (>= 1.0.0),
+    dplyr (>= 1.0.1),
     htmltools (>= 0.5.0),
     methods,
-    psychTestR (>= 2.19.1),
+    psychTestR (>= 2.21.1),
     purrr (>= 0.3.4),
     R.utils (>= 2.9.2),
     shiny (>= 1.5.0),
@@ -29,5 +29,5 @@ Suggests:
     devtools,
     shinytest (>= 1.4.0),
     testthat (>= 2.3.2)
-Remotes: pmcharrison/psychTestR
+Remotes: github::fmhoeger/psychTestR@ddbd663
 RoxygenNote: 7.1.1
