--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: psyquest
 Title: LongGold psychTestR questionnaires
 Version: 1.1.5
 Author: Klaus Frieler, Frank Höger
-Maintainer: Frank Höger <fmh@mirsem.org>
+Maintainer: Frank Höger <fmhoeger@mirsem.org>
 Description: Implementation of 18 questionnaires developed for the LongGold project and based on the psychTestR library.
 License: MIT + file LICENSE
 URL: https://github.com/fmhoeger/psyquest
