--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ notifications:
   email:
     - fmhoeger@mirsem.org
 
-before_deploy: Rscript -e 'remove.packages("psychTestR"); remotes::install_cran("pkgdown"); remotes::install_github("rstudio/rmarkdown"); install.packages("shinytest"); shinytest::installDependencies()'
+before_install:
+  Rscript -e 'devtools::install()'
+
+before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_github("rstudio/rmarkdown"); install.packages("shinytest"); shinytest::installDependencies()'
 
 after_success:
   - travis_wait Rscript -e 'covr::codecov()'
