--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
+r: oldrel
 sudo: false
 cache: packages
 warnings_are_errors: true
@@ -10,15 +11,7 @@ notifications:
   email:
     - fmhoeger@mirsem.org
 
-before_script:
-  Rscript -e 'devtools::install()'
-
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_github("rstudio/rmarkdown"); install.packages("shinytest"); shinytest::installDependencies()'
 
 after_success:
   - travis_wait Rscript -e 'covr::codecov()'
-
-#deploy:
-#  provider: script
-#  script: Rscript -e 'pkgdown::deploy_site_github()'
-#  skip_cleanup: true
