--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
+r:
+  - oldrel
 sudo: false
 cache: packages
 warnings_are_errors: true
@@ -14,8 +16,3 @@ before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_gi
 
 after_success:
   - travis_wait Rscript -e 'covr::codecov()'
-
-#deploy:
-#  provider: script
-#  script: Rscript -e 'pkgdown::deploy_site_github()'
-#  skip_cleanup: true
