--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: r
-r:
-  - oldrel
+r: oldrel
 sudo: false
 cache: packages
 warnings_are_errors: true
