import map and map_dbl from purrr package
bump version to 1.1.6

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,8 @@ importFrom(psychTestR,"text_input_page")
 importFrom(purrr,"is_scalar_character")
 importFrom(purrr,"is_scalar_double")
 importFrom(purrr,"is_scalar_integer")
+importFrom(purrr,"map")
+importFrom(purrr,"map_dbl")
 importFrom(stats,"setNames")
 importFrom(tibble,"tibble")
 importFrom(utils,"read.csv")
