New test GDS installed. With item_bacnk, dict, test and in standalone

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(DAC)
 export(DAC_standalone)
 export(DEG)
 export(DEG_standalone)
+export(GDS)
+export(GDS_standalone)
 export(GMS)
 export(GMS_standalone)
 export(GRT)
