--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ export(HOP)
 export(HOP_standalone)
 export(MHE)
 export(MHE_standalone)
-export(NOMC_page)
 export(PAC)
 export(PAC_standalone)
 export(SCA)
@@ -41,7 +40,6 @@ export(TPI)
 export(TPI_standalone)
 export(battery)
 export(languages)
-export(make_ui_NOMC)
 export(make_ui_month_and_year_select)
 export(month_and_year_select_page)
 export(standalone)
@@ -52,6 +50,7 @@ importFrom(dplyr,"mutate")
 importFrom(dplyr,"pull")
 importFrom(methods,"is")
 importFrom(psychTestR,"NAFC_page")
+importFrom(psychTestR,"checkbox_page")
 importFrom(psychTestR,"conditional")
 importFrom(psychTestR,"dropdown_page")
 importFrom(psychTestR,"get_local")
