Implementation of new questionnaire (STOMP or SMP).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ export(SEM)
 export(SEM_standalone)
 export(SES)
 export(SES_standalone)
+export(SMP)
+export(SMP_standalone)
 export(SOS)
 export(SOS_standalone)
 export(TOI)
