Add MUS and test_id

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(HOP)
 export(HOP_standalone)
 export(MHE)
 export(MHE_standalone)
+export(MUS)
+export(MUS_standalone)
 export(PAC)
 export(PAC_standalone)
 export(SCA)
