--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ notifications:
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_github("rstudio/rmarkdown"); install.packages("shinytest"); shinytest::installDependencies()'
 
 after_success:
-  - travis_wait Rscript -e 'covr::codecov()'
+  - travis_wait 45 Rscript -e 'covr::codecov()'
 
 addons:
   apt:
