--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ notifications:
 
 before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_github("rstudio/rmarkdown"); install.packages("shinytest"); shinytest::installDependencies()'
 
+script:
+  - R CMD build .
+  - travis_wait 45 R CMD check psyquest_*.tar.gz --as-cran
+
 after_success:
   - travis_wait 45 Rscript -e 'covr::codecov()'
 
