--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,10 @@ export(GRT)
 export(GRT_standalone)
 export(HOP)
 export(HOP_standalone)
+export(IMI)
+export(IMI_standalone)
+export(JIW)
+export(JIW_standalone)
 export(MHE)
 export(MHE_standalone)
 export(MUS)
