--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(HOP)
 export(HOP_standalone)
 export(IMI)
 export(IMI_standalone)
+export(JIC)
+export(JIC_standalone)
 export(JIW)
 export(JIW_standalone)
 export(MHE)
