--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(DAC)
 export(DAC_standalone)
 export(DEG)
 export(DEG_standalone)
+export(EWE)
+export(EWE_standalone)
 export(GDS)
 export(GDS_standalone)
 export(GMS)
@@ -72,6 +74,7 @@ importFrom(purrr,"is_scalar_character")
 importFrom(purrr,"is_scalar_double")
 importFrom(purrr,"is_scalar_integer")
 importFrom(purrr,"map")
+importFrom(purrr,"map_chr")
 importFrom(purrr,"map_dbl")
 importFrom(stats,"setNames")
 importFrom(tibble,"tibble")
