Added IMI, FSR, and FSS, some improvements in standalone

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,10 @@ export(DEG)
 export(DEG_standalone)
 export(EWE)
 export(EWE_standalone)
+export(FSR)
+export(FSR_standalone)
+export(FSS)
+export(FSS_standalone)
 export(GDS)
 export(GDS_standalone)
 export(GMS)
