Added get_subscales and get_tests, pimped itembank, short version for FSS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,8 @@ export(TOM_standalone)
 export(TPI)
 export(TPI_standalone)
 export(battery)
+export(get_subscales)
+export(get_tests)
 export(languages)
 export(make_ui_month_and_year_select)
 export(month_and_year_select_page)
