Added short versions doc, arrange to import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(month_and_year_select_page)
 export(standalone)
 importFrom(R.utils,"insert")
 importFrom(dplyr,"%>%")
+importFrom(dplyr,"arrange")
 importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
 importFrom(dplyr,"pull")
