--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,8 @@ export(JIC)
 export(JIC_standalone)
 export(JIW)
 export(JIW_standalone)
+export(MES)
+export(MES_standalone)
 export(MHE)
 export(MHE_standalone)
 export(MUS)
