Added QHC by Kilian

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ export(MUS)
 export(MUS_standalone)
 export(PAC)
 export(PAC_standalone)
+export(QHC)
+export(QHC_standalone)
 export(SCA)
 export(SCA_standalone)
 export(SCS)
