--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,8 @@ export(JIW)
 export(JIW_standalone)
 export(MES)
 export(MES_standalone)
+export(MET)
+export(MET_standalone)
 export(MHE)
 export(MHE_standalone)
 export(MUS)
