--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(JIC)
 export(JIC_standalone)
 export(JIW)
 export(JIW_standalone)
+export(MDS)
+export(MDS_standalone)
 export(MES)
 export(MES_standalone)
 export(MET)
