Reworked MET, added CRT, added labelled_textinput, changed default for standalones to with_id = F (what a relief!)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(CCM)
 export(CCM_standalone)
 export(CMT)
 export(CMT_standalone)
+export(CRT)
+export(CRT_standalone)
 export(DAC)
 export(DAC_standalone)
 export(DEG)
@@ -74,6 +76,7 @@ export(TPI_standalone)
 export(battery)
 export(get_subscales)
 export(get_tests)
+export(labelled_text_input_page)
 export(languages)
 export(make_ui_month_and_year_select)
 export(month_and_year_select_page)
