--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,8 @@ export(TOM_standalone)
 export(TPI)
 export(TPI_standalone)
 export(battery)
+export(get_item_info)
+export(get_items)
 export(get_subscales)
 export(get_tests)
 export(labelled_text_input_page)
