--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,8 @@ export(SMP)
 export(SMP_standalone)
 export(SOS)
 export(SOS_standalone)
+export(SWL)
+export(SWL_standalone)
 export(TOI)
 export(TOI_standalone)
 export(TOM)
