Fixed get_item_info depencendies, new ver. 1.3.15

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ importFrom(dplyr,"arrange")
 importFrom(dplyr,"filter")
 importFrom(dplyr,"mutate")
 importFrom(dplyr,"pull")
+importFrom(dplyr,"select")
 importFrom(methods,"is")
 importFrom(psychTestR,"NAFC_page")
 importFrom(psychTestR,"checkbox_page")
