Added MPA, added LV to TPI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ export(MET)
 export(MET_standalone)
 export(MHE)
 export(MHE_standalone)
+export(MPA)
+export(MPA_standalone)
 export(MUS)
 export(MUS_standalone)
 export(PAC)
