--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: psyquest
 Title: LongGold psychTestR questionnaires
-Version: 1.3.16
+Version: 1.3.17
 Authors@R: c(
   person("Frank", "Höger", email = "fmhoeger@mirsem.org", role = c("aut", "cre")),
-  person("Klaus", "Frieler", email = "kf@omniversum.de", role = c("aut")),
+  person("Klaus", "Frieler", email = "klaus@ae.mpg.de", role = c("aut")),
   person("Viola", "Pausch", email = "viola.pausch@posteo.de", role = c("ctb")),
   person("Kilian", "Sander", email = "kilian.sander@aol.de", role = c("ctb")),
   person("Nicolas", "Ruth", email = "N.Ruth@gold.ac.uk", role = c("ctb"))
