Added CBQ and IBQ

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(BMR)
 export(BMR_standalone)
+export(CBQ)
+export(CBQ_standalone)
 export(CCM)
 export(CCM_standalone)
 export(CMT)
@@ -30,6 +32,8 @@ export(HSP)
 export(HSP_standalone)
 export(HUM)
 export(HUM_standalone)
+export(IBQ)
+export(IBQ_standalone)
 export(IMI)
 export(IMI_standalone)
 export(JIC)
