Added randomization option for PHT, rewrote get_items, scoring, s'more fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,8 @@ export(MUS)
 export(MUS_standalone)
 export(PAC)
 export(PAC_standalone)
+export(PHT)
+export(PHT_standalone)
 export(PMS)
 export(PMS_standalone)
 export(QHC)
@@ -83,6 +85,7 @@ export(TPI_standalone)
 export(battery)
 export(get_item_info)
 export(get_items)
+export(get_items2)
 export(get_subscales)
 export(get_tests)
 export(labelled_text_input_page)
