--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ export(JIC)
 export(JIC_standalone)
 export(JIW)
 export(JIW_standalone)
+export(LLQ)
+export(LLQ_standalone)
 export(MDS)
 export(MDS_standalone)
 export(MES)
